syntax = "proto3";

package message;

message EnrichMessage {
  string id = 1;
  string user_id = 2;
  string index = 3;
  string file_name = 4;
  bool notify = 5;
}
